@@ -23,6 +23,14 @@ require_once('../functions/tree.php');
 *     $mailbox - selected mailbox from the form
 */
 
+if ($mailbox == '') {
+    displayPageHeader($color, 'None');
+    echo "<html><body bgcolor=$color[4]>";
+    plain_error_message(_("You have not selected a folder to delete. Please do so.")."<BR><A HREF=\"../src/folders.php\">"._("Click here to go back")."</A>.", $color);
+    exit;
+}
+
+
 $imap_stream = sqimap_login($username, $key, $imapServerAddress, $imapPort, 0);
 $boxes = sqimap_mailbox_list ($imap_stream);
 global $delimiter, $delete_folder;
@@ -35,24 +43,24 @@ else
 /** lets see if we CAN move folders to the trash.. otherwise,
     ** just delete them **/
 
-// Courier IMAP doesn't like subfolders of Trash
+/* Courier IMAP doesn't like subfolders of Trash */
 if (strtolower($imap_server_type) == "courier") {
     $can_move_to_trash = false;
 }
 
-// If global options say we can't move it into Trash
+/* If global options say we can't move it into Trash */
 else if(isset($delete_folder) && $delete_folder == true) {
     $can_move_to_trash = false;
 }
 
-// If it's already a subfolder of trash, we'll have to delete it
+/* If it's already a subfolder of trash, we'll have to delete it */
 else if(eregi("^".$trash_folder.".+", $mailbox)) {
 
     $can_move_to_trash = false;
 
 }
 
-// Otherwise, check if trash folder exits and support sub-folders
+/* Otherwise, check if trash folder exits and support sub-folders */
 else {
     for ($i = 0; $i < count($boxes); $i++) {
         if ($boxes[$i]["unformatted"] == $trash_folder) {
@@ -69,16 +77,16 @@ for ($i = 0;$i < count($boxes);$i++) {
         continue;
     }
 }
-// Now create the nodes for subfolders of the parent folder
-// You can tell that it is a subfolder by tacking the mailbox delimiter
-//    on the end of the $mailbox string, and compare to that.
+/* Now create the nodes for subfolders of the parent folder
+   You can tell that it is a subfolder by tacking the mailbox delimiter
+   on the end of the $mailbox string, and compare to that.  */
 $j = 0;
 for ($i = 0;$i < count($boxes);$i++) {
     if (substr($boxes[$i]["unformatted"], 0, strlen($mailbox_no_dm . $delimiter)) == ($mailbox_no_dm . $delimiter)) {
         addChildNodeToTree($boxes[$i]["unformatted"], $boxes[$i]["unformatted-dm"], $foldersTree);
     }
 }
-//   simpleWalkTreePre(0, $foldersTree);
+/*   simpleWalkTreePre(0, $foldersTree); */
 
 /** Lets start removing the folders and messages **/
 if (($move_to_trash == true) && ($can_move_to_trash == true)) { /** if they wish to move messages to the trash **/
